<resources>
    <string name="app_name">SubmissionStoryApp</string>
    <string name="copyright">© 2023 Ilham Shodiq</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">New Here? Create a new account!</string>
    <string name="name">Name</string>
    <string name="registertext">Register</string>
    <string name="insert_your_name">Insert Your Name</string>
    <string name="already_have_an_account_login">Already have an Account? Login!</string>
    <string name="logout">logout</string>
    <string name="story_app">Story App</string>
    <string name="detail">Detail</string>
    <string name="camera">Camera</string>
    <string name="galeri">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="preview_image">Preview Image</string>
    <string name="not_getting_permission">Not getting permission.</string>
    <string name="story_uploaded">Story Uploaded!</string>
    <string name="story_not_uploaded">Story not Uploaded!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <string name="location">Show Location</string>
</resources>